# RustyFusion

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  config.toml  config.toml.default  config_def.toml  config_schema.toml  docker-compose.yml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: rust.yml
.zed/: debug.json  tasks.json
codegen/: config_impl.rs
scripts/: .luaurc  example_hello.lua  example_tick.lua  globals.d.luau  hello.lua  server_start.lua
scripts/ai/: follow.luau  friendly_combatant.luau  mob.luau  mob_pack_member.luau
scripts/ai/lib/: behaviors.luau
scripts/lib/: behaviors.luau  mob_base.luau
sql/: ban_account.sql  change_account_level.sql  clear_blocks.sql  clear_buddies.sql  clear_items.sql  clear_nanos.sql  clear_quest_items.sql  clear_running_quests.sql  create_account.sql  create_meta_table.sql  create_tables.sql  delete_player.sql  enum_account_ids.sql  find_account.sql  find_account_from_player.sql  get_char_info.sql  init_player.sql  invalidate_cookie_for_account.sql  load_blocked_ids.sql  load_buddy_ids.sql  load_items.sql  load_nanos.sql  load_player.sql  load_players.sql  load_quest_items.sql  load_running_quests.sql  meta_table_exists.sql  save_block.sql  save_buddy.sql  save_item.sql  save_nano.sql  save_player.sql  save_quest_item.sql  save_running_quest.sql  unban_account.sql  update_appearance.sql  update_selected.sql
src/: ai.rs  chunk.rs  config.rs  database.rs  defines.rs  enums.rs  error.rs  geo.rs  helpers.rs  item.rs  lib.rs  mission.rs  monitor.rs  nano.rs  npc.rs  path.rs  player.rs  scripting.rs  skills.rs  slider.rs  tabledata.rs  timer.rs  trade.rs  tui.rs  util.rs
src/config/: general_settings.rs  login_settings.rs  mod.rs  shard_settings.rs
src/database/: mod.rs  mongo.rs  postgresql.rs
src/entity/: egg.rs  mod.rs  npc.rs  player.rs  slider.rs
src/net/: cnclient.rs  cnserver.rs  crypto.rs  ffclient.rs  ffconnection.rs  ffserver.rs  mod.rs  packet.rs
src/scripting/: entity.rs  mod.rs  npc.rs
src/state/: login.rs  mod.rs  shard.rs
tools/: c_to_rust_structs.py
