[package]
name = "rusty_fusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "2.8.0"
#bcrypt = "0.15"
num-traits = "0.2"
num-derive = "0.3"
rand = "0.8.4"
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ['derive'] }
toml = "0.8.8"
ctrlc = { version = "3.4.1", features = ['termination'] }
uuid = { version = "1.6.1", features = ['v4', 'fast-rng']}
vecmath = "1.0.0"
postgres = "0.19.7"
