[package]
name = "rusty_fusion"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "2.8.0"
#bcrypt = "0.15"
rand = "0.8.4"
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ['derive'] }
toml = "0.8.8"
ctrlc = { version = "3.4.1", features = ['termination'] }
uuid = { version = "1.6.1", features = ['v4', 'fast-rng']}
vecmath = "1.0.0"
postgres = { version = "0.19.7", optional = true }
mongodb = { version = "2.8.0", features = ["tokio-sync"], optional = true }
num_enum = "0.7.2"
regex = "1.10.3"
bcrypt = "0.15.0"
serde_repr = "0.1.18"
chrono = "0.4.38"
mlua = { version = "0.9.9", features = ["vendored", "luajit", "send"] }

[features]
default = ["postgres"]
postgres = ["dep:postgres"]
mongo = ["dep:mongodb"]
