[package]
name = "rusty_fusion"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "2.8.0"
rand = "0.8.4"
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ['derive'] }
toml = "0.8.8"
uuid = { version = "1.6.1", features = ['v4', 'fast-rng']}
vecmath = "1.0.0"
tokio-postgres = { version = "0.7.16", optional = true }
num_enum = "0.7.2"
regex = "1.11.1"
bcrypt = "0.15.0"
serde_repr = "0.1.18"
chrono = "0.4.38"
ffmonitor = { git = "https://github.com/OpenFusionProject/ffmonitor.git", tag = "v2.2.0" }
aes-gcm = "0.10.3"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"]}
maxminddb = "0.27.3"
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1"

[features]
default = ["postgres"]
postgres = ["dep:tokio-postgres"]

[profile.dev.package.backtrace]
opt-level = 3
